[tool.poetry]
name = "dzenbot"
version = "0.1.0"
description = ""
authors = ["Magistrmate <101048039+Magistrmate@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.19.2"
firebase-admin = "^6.5.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
